k8s/apps/multimedia/sonarr/overlays/shows/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr-shows
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr - Shows"
    gethomepage.dev/group: "Multimedia"
    gethomepage.dev/icon: "sonarr"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr-shows.emnt.dev`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: sonarr-shows
          namespace: sonarr-shows
          port: 8989
    - kind: Rule
      match: "Host(`sonarr-shows.emnt.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik
          namespace: authentik
          port: 9000
